# dock

./: .gitignore  HACKING  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml  gettext.yml  main.yml  merge.yml  release.yml
blur-protocol/: pantheon-blur-v1.xml
data/: Application.css  Application.css~  Launcher.css  MainWindow.css  autostart.desktop  dock.desktop  dock.gresource.xml  dock.gschema.xml  dock.metainfo.xml.in  dock.service.in  dock.target  io.elementary.dock.gresource.xml  meson.build  net.launchpad.plank.gschema.xml.in  plank.desktop.in
data/themes/Default/: dock.theme
data/themes/TransparentNoShadows/: dock.theme
data/ui/: preferences.ui
debian/: changelog  control  copyright  libplank-common.install  libplank-doc.install  plank.examples  plank.install  plank.lintian-overrides  rules
debian/patches/: 1001_typo-in-AnimateRenderer-error-msg.patch  series
docklets/Trash/: TrashDockItem.vala
docs/: install_docs.sh  meson.build
lib/: DockController.vala  DockPreferences.vala  DockRenderer.vala  DragManager.vala  PositionManager.vala  libplank.symbols  meson.build
lib/Drawing/: DockTheme.vala  Theme.vala
lib/Factories/: AbstractMain.vala
lib/Items/: ApplicationDockItem.vala  DockElement.vala  PlankDockItem.vala
lib/Services/: GalaClient.vala  SwitcherooControl.vala  System.vala  WindowControl.vala
lib/Widgets/: DockWindow.vala  PreferencesWindow.vala
po/: LINGUAS  POTFILES  POTFILES.in  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  (+176 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+174 more)
protocol/: meson.build  pantheon-desktop-shell-v1.xml  pantheon-desktop-shell.vapi
src/: App.vala  AppDrawer.vala  AppInfo.vala  AppSystem.vala  AppWindow.vala  Application.vala  ApplicationDrawer.vala  BaseIconGroup.vala  BaseItem.vala  BottomMargin.vala  ContainerItem.vala  DesktopIntegration.vala  DockItem.vala  DockSettings.vala  HorizontalMargin.vala  IconGroup.vala  ItemGroup.vala  ItemManager.vala  Launcher.vala  LauncherManager.vala  Main.vala  MainWindow.vala  PoofPopover.vala  RenderNodeWalker.vala  SessionManager.vala  Window.vala  WindowSystem.vala  Workspace.vala  WorkspaceManager.vala  WorkspaceSystem.vala  WorkspaceWindow.vala  meson.build
src/AppMenu/: AppMenuButton.vala  AppMenuWindow.vala
src/AppSystem/: App.vala  AppCache.vala  AppInfo.vala  AppSystem.vala  AppWidget.vala  Launcher.vala
src/AppSystem/ApplicationMenu/: ApplicationButton.vala  ApplicationGrid.vala  ApplicationGridPage.vala  ApplicationMenu.vala  ApplicationMenuButton.vala
src/AppSystem/Background/: BackgroundApp.vala  BackgroundAppRow.vala  BackgroundItem.vala  BackgroundMonitor.vala
src/DBus/: AppCenter.vala  Client.vala  GalaDBus.vala  ItemInterface.vala  PantheonShellX11.vala  ShellKeyGrabber.vala  SwitcherooControl.vala  Unity.vala  WindowDragManager.vala
src/SmartSystem/: Database.vala  SmartGroup.vala  SmartSystem.vala  Suggestion.vala
src/WindowSystem/: DesktopIntegration.vala  Window.vala  WindowSystem.vala
src/WorkspaceSystem/: DynamicWorkspaceItem.vala  IconGroup.vala  Workspace.vala  WorkspaceItem.vala  WorkspaceSystem.vala
tests/: Drawing.vala  headless_runner.sh  meson.build
