sources = [
    'Application.vala',
    'BaseItem.vala',
    'ItemManager.vala',
    'MainWindow.vala',
    'AppSystem' / 'App.vala',
    'AppSystem' / 'AppCache.vala',
    'AppSystem' / 'AppSystem.vala',
    'AppSystem' / 'Launcher.vala',
    'AppSystem' / 'PoofPopover.vala',
    'AppSystem' / 'ApplicationMenu' / 'ApplicationButton.vala',
    'AppSystem' / 'ApplicationMenu' / 'ApplicationGrid.vala',
    'AppSystem' / 'ApplicationMenu' / 'ApplicationGridPage.vala',
    'AppSystem' / 'ApplicationMenu' / 'ApplicationMenu.vala',
    'AppSystem' / 'ApplicationMenu' / 'ApplicationMenuButton.vala',
    'DBus' / 'GalaDBus.vala',
    'DBus' / 'ItemInterface.vala',
    'DBus' / 'ShellKeyGrabber.vala',
    'DBus' / 'SwitcherooControl.vala',
    'DBus' / 'Unity.vala',
    'WindowSystem' / 'DesktopIntegration.vala',
    'WindowSystem' / 'Window.vala',
    'WindowSystem' / 'WindowSystem.vala',
    'WorkspaceSystem' / 'DynamicWorkspaceItem.vala',
    'WorkspaceSystem' / 'IconGroup.vala',
    'WorkspaceSystem' / 'Workspace.vala',
    'WorkspaceSystem' / 'WorkspaceSystem.vala'
]

executable(
    meson.project_name(),
    gresource,
    sources,
    dependencies: dependencies,
    install: true
)
