sources = [
    'Application.vala',
    'BaseItem.vala',
    'ItemManager.vala',
    'MainWindow.vala',
    'AppSystem' / 'App.vala',
    'AppSystem' / 'AppSystem.vala',
    'AppSystem' / 'Launcher.vala',
    'AppSystem' / 'PoofPopover.vala',
    'AppSystem' / 'Background' / 'BackgroundApp.vala',
    'AppSystem' / 'Background' / 'BackgroundAppRow.vala',
    'AppSystem' / 'Background' / 'BackgroundItem.vala',
    'AppSystem' / 'Background' / 'BackgroundMonitor.vala',
    'DBus' / 'GalaDBus.vala',
    'DBus' / 'ItemInterface.vala',
    'DBus' / 'ShellKeyGrabber.vala',
    'DBus' / 'SwitcherooControl.vala',
    'DBus' / 'Unity.vala',
    'WindowSystem' / 'DesktopIntegration.vala',
    'WindowSystem' / 'Window.vala',
    'WindowSystem' / 'WindowSystem.vala',
    'WorkspaceSystem' / 'DynamicWorkspaceItem.vala',
    'WorkspaceSystem' / 'IconGroup.vala',
    'WorkspaceSystem' / 'Workspace.vala',
    'WorkspaceSystem' / 'WorkspaceSystem.vala'
]

executable(
    meson.project_name(),
    gresource,
    sources,
    dependencies: dependencies,
    install: true
)
